--- a/frontend/src/pages/styles.css
+++ b/frontend/src/pages/styles.css
@@ -11,6 +11,7 @@
   border-radius: 5px;
   background-color: #333333;
 }
+
 .message p {
   overflow-x: auto;
 }
@@ -20,4 +21,42 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
+}
+
+.card button {
+  padding: 10px;
+  background-color: #333333;
+  color: #fff;
+  border: none;
+  border-radius: 5px;
+
+}
+
+.card {
+  color: #333333;
+  background-color: #fff;
+  padding: 26px;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+  border-radius: 5px;
+  gap: 20px;
+  margin: 20px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-wrap: wrap;
+  max-width: 400px;
+  margin-top: 40px;
+}
+
+.card textarea {
+  max-width: 390px;
+  min-width: 390px;
+
+}
+
+.card h1 {
+  text-align: center;
+  font-size: 27px;
+  padding: 0;
+  margin: 0;
 }
